# rentomatic

./: README.md  pyproject.toml
rentomatic/: __init__.py
tests/domain/: test_room.py
