[tool.pdm]
distribution = false

[project]
name = "rentomatic"
version = "0.1.0"
description = "A demo implementation of a clean architecture in Python."
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "mit"}
authors = [
    {name = "Leonardo Giordani"},
    {name = "heonjin"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
prod = []
dev = []
test = [
    "tox>=4.15.1",
    "coverage>=7.5.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/pycabook/rentomatic"
